Fixed logo clipping (#57)

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -155,7 +155,7 @@ body > header {
     }
 
     svg {
-      width: auto;
+      width: 100%;
       height: 100%;
       fill: currentColor;
       transition: all 0.5s ease;
